src/components/NavBar/navBar.module.scss
@import "@/sass/abstracts/variables.scss";
@import "@/sass/abstracts/mixins.scss";

.container {
  position: fixed;
  bottom: 0;

  width: 100%;

  border-top-left-radius: 35%;
  border-top-right-radius: 35%;

  box-shadow: 0 0 1rem 0.1rem black;

  z-index: 2;
}

.buttonsContainer {
  display: flex;
  gap: 10rem;

  @include responsiveDesign(1000) {
    gap: 8rem;
  }

  @include responsiveDesign(800) {
    gap: 6rem;
  }

  @include responsiveDesign(600) {
    gap: 4rem;
  }

  @include responsiveDesign(500) {
    gap: 2rem;
  }
}

.navBarBottom {
  display: flex;
  align-items: center;
  justify-content: space-evenly;

  padding: 2rem 0;
  background-color: #999999;

  box-shadow: inset 0rem 0rem 0.4rem 1.44rem rgba(255, 255, 255, 0.3),
    inset 0rem 0rem 0.4rem 0.4rem rgba(255, 255, 255, 0.7);

  border-top-left-radius: 35%;
  border-top-right-radius: 35%;
  z-index: 3;
  margin-top: auto;
}

.containerTop,
.navBarTop {
  bottom: initial;
  top: 0;

  border-top-left-radius: initial;
  border-top-right-radius: initial;

  border-bottom-left-radius: 35%;
  border-bottom-right-radius: 35%;
}

.containerNarrow {
  left: 50%;
  transform: translateX(-50%);

  width: auto;
}

.narrow {
  padding: 2rem 4rem;
  gap: 4rem;
}

